--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
-	<title>Document</title>
+	<title>Github hosting</title>
 </head>
 <body>
 	<h1>Hello Github repos</h1>
